[package]
name = "movie-nexus"
version = "0.1.0"
authors = ["Alexander Gazarov <unrealrider@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.3.1"
lazy_static = "1.4.0"

[build-dependencies]
windows = "0.3.1"